@@ -1213,8 +1213,6 @@ static void start_discovery(void) noexcept
 		// and in the order in which they will needed by the Kodi callback functions
 		std::call_once(once, []() {
 
-			bool lineupschanged = false;			// Flag if lineups have changed
-
 			// Create a copy of the current addon settings structure
 			struct addon_settings settings = copy_settings();
 
@@ -1223,14 +1221,14 @@ static void start_discovery(void) noexcept
 
 			// Schedule the initial discovery tasks to execute as soon as possible
 			g_scheduler.add([](scalar_condition<bool> const& cancel) -> void { bool changed; discover_devices(cancel, changed); });
-			g_scheduler.add([&](scalar_condition<bool> const& cancel) -> void { discover_lineups(cancel, lineupschanged); });
+			g_scheduler.add([](scalar_condition<bool> const& cancel) -> void { bool changed; discover_lineups(cancel, changed); });
 			g_scheduler.add([](scalar_condition<bool> const& cancel) -> void { bool changed; discover_recordingrules(cancel, changed); });
 			g_scheduler.add([](scalar_condition<bool> const& cancel) -> void { bool changed; discover_episodes(cancel, changed); });
 			g_scheduler.add([](scalar_condition<bool> const& cancel) -> void { bool changed; discover_recordings(cancel, changed); });
 
 			// Schedule the startup alert and listing update tasks to occur after the initial discovery tasks have completed
 			g_scheduler.add(startup_alerts_task);
-			g_scheduler.add(std::bind(update_listings_task, false, lineupschanged, std::placeholders::_1));
+			g_scheduler.add(std::bind(update_listings_task, false, true, std::placeholders::_1));
 
 			// Schedule the remaining update tasks to run at the intervals specified in the addon settings
 			g_scheduler.add(std::chrono::system_clock::now() + std::chrono::seconds(settings.discover_devices_interval), update_devices_task);
